discussion/kv_engine/184180/184180_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53042: Aggregate stats for multiple buckets

Adds a new GlobalTask called CrossBucketStatsAggregator which can be run
periodically to update the stats we care about for the quota sharing
group. I will use this task to update the memory condition checks such
that they consider the pooled watermarks and memory usage of all engines
sharing quota.

Change-Id: I755e139f2c87ed5ce3ce2d77680e72ac7dca406a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-16 17:27:12.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-16 18:08:08.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22230/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:45:34: error: out-of-line definition of "updateStat" does not match any declaration in "CrossBucketStatsAggregator" [clang-diagnostic-error]
void CrossBucketStatsAggregator::updateStat(const std::vector<E>& engines,
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:58:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, estimatedTotalMemoryUsed);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:59:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, maxDataSize);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:60:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemCurrent);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:61:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemLowWatermark);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:62:5: error: no matching member function for call to "updateStat" [clang-diagnostic-error]
    updateStat(engines, pageableMemHighWatermark);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:89:32: error: no template named "vector" in namespace "std" [clang-diagnostic-error]
    void updateStat(const std::vector<E>& engines,
                               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22230/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.cc:45:34:
error: out-of-line definition of "updateStat" does not match any declaration in "CrossBucketStatsAggregator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22230/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51548/ : FAILURE

Failure of GoogleTest "TransportProtocols/AuditTest.MB54426/Mcbp":

<pre>
[ RUN      ] TransportProtocols/AuditTest.MB54426/Mcbp
[warn] evsig_init_: socketpair: Only one usage of each socket address (protocol/network address/port) is normally permitted.
unknown file: error: C++ exception with description "Failed to create pipe for AtomicNotificationQueue9: bad file descriptor" thrown in the test body.
[  FAILED  ] TransportProtocols/AuditTest.MB54426/Mcbp, where GetParam() = Mcbp (645 ms)
TransportProtocols/AuditTest.MB54426/Mcbp
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51548/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43269/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/cross_bucket_stats_aggregator.h:89:32:
error: no template named "vector" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43269/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/988/ : FAILURE

Failure of GoogleTest "TwoBucketQSPagingTest.ItemsAreEvictedFromSingleBucket":

<pre>
[ RUN      ] TwoBucketQSPagingTest.ItemsAreEvictedFromSingleBucket
[2022-12-16T17:41:30.098Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp_cluster/quota_sharing_paging_test.cc:235: Failure
[2022-12-16T17:41:30.098Z] Value of: getSharedMemStats().isBelowLowWatermark()
[2022-12-16T17:41:30.098Z]   Actual: false
[2022-12-16T17:41:30.098Z] Expected: true
[2022-12-16T17:41:30.098Z] Expected quota-sharing group to be below lower watermark: {current: 11.100509643554688 MiB, lower: 9.3234939575195312 MiB, upper: 10.446846008300781 MiB}
[2022-12-16T17:41:30.098Z] [  FAILED  ] TwoBucketQSPagingTest.ItemsAreEvictedFromSingleBucket (2367 ms)
TwoBucketQSPagingTest.ItemsAreEvictedFromSingleBucket
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/988/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/988/ )

Timeout of a CTest test [2022-12-16T17:45:22.311Z]  18/474 Test #271: ep-engine_ep_unit_tests.EphemeralOrPersistent/STItemPagerTest ...........................................} ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/988/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25554/ : FAILURE

Failure of GoogleTest "TwoBucketQSPagingTest.ItemsAreFairlyEvictedFromTwoBuckets":

<pre>
[ RUN      ] TwoBucketQSPagingTest.ItemsAreFairlyEvictedFromTwoBuckets
[2022-12-16T17:55:30.364Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp_cluster/quota_sharing_paging_test.cc:313: Failure
[2022-12-16T17:55:30.364Z] Expected: (absdiff(getMemStats(0).current, 7.5_MiB)) < (1_MiB), actual: 1476201 vs 1048576
[2022-12-16T17:55:30.364Z] [  FAILED  ] TwoBucketQSPagingTest.ItemsAreFairlyEvictedFromTwoBuckets (5707 ms)
TwoBucketQSPagingTest.ItemsAreFairlyEvictedFromTwoBuckets
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25554/ )

ThreadSanitizer issue: data race (/opt/gcc-10.2.0/lib64/libtsan.so.0+0x37e91) in __interceptor_free  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25554/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32689/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32689/ )

Test exceeded the timeout:
[2022-12-16T17:51:10.742Z] Running [76/91]: test dcp consumer"s processer task behavior.../usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32689/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21838/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12037/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23797/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11948/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24692/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24272/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
